--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,12 @@
 		</dependency>
 		
 		<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.4.1211</version>
+</dependency>
+		
+		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>${commons-io.version}</version>
