--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//src/main/resources=UTF-8
 encoding//src/main/resources/reports/rpt_draftinvoice.jrxml=UTF-8
 encoding//src/main/resources/reports/rpt_invoice.jrxml=UTF-8
 encoding//src/main/resources/reports/rpt_receipt.jrxml=UTF-8
+encoding//src/main/resources/reports/rpt_ten_stmt.jrxml=UTF-8
 encoding//src/test/java=UTF-8
 encoding//target/generated-sources/java=UTF-8
 encoding/<project>=UTF-8
