--- a/pom.xml
+++ b/pom.xml
@@ -335,7 +335,17 @@
 			<version>3.14</version>
 		</dependency>
 
-		
+		 <!-- JavaMail-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
 		 
 
 	</dependencies>
