--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,4 +1,4 @@
 mail.host=smtp.gmail.com
 mail.port=587
-sender.username=
-sender.password=
+sender.username=renttechtest
+sender.password=Manchester12
